--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=SE2Midterm
 # Database Configuration
 spring.datasource.url=jdbc:mysql://127.0.0.1:3306/se2midterm
 spring.datasource.username=root
-spring.datasource.password=Thanh2004@
+spring.datasource.password=nghia27112004
 
 # JPA/Hibernate properties
 spring.jpa.hibernate.ddl-auto=update
